packages/typ/tests/fixtures/diagnostics/0873_gadt_witness_branch_return_mismatch_02.ml.infer.expected
File "0873_gadt_witness_branch_return_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0873_gadt_witness_branch_return_mismatch_02 is not a valid module name.

File "0873_gadt_witness_branch_return_mismatch_02.ml", line 6, characters 17-21:
6 |   | WInt_beta -> true
                     ^^^^
Error: This expression should not be a boolean literal, the expected type is
       a
